// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with launcher visible 1`] = `
<div>
  <iframe
    class="zEWidget-launcher "
    id="launcher"
    style="background: transparent; z-index: 999998; transform: translateZ(0); position: fixed; transition-duration: 250ms; transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1); transition-property: opacity, top, bottom; opacity: 1; width: 374px; height: 50px; max-height: 572px; min-height: 50px; margin: 10px 20px 10px 20px; right: 0px; bottom: 0px; display: none;"
    tabindex="-1"
    title="launcher"
  />
</div>
`;

exports[`with widget visible 1`] = `
<div>
  <iframe
    class="zEWidget-webWidget "
    id="webWidget"
    style="background: transparent; z-index: 999999; transform: translateZ(0); position: fixed; transition-duration: 250ms; transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1); transition-property: opacity, top, bottom; opacity: 1; width: 374px; height: 100%; max-height: 572px; min-height: 150px; right: 0px; bottom: 0px; display: none;"
    tabindex="-1"
    title="webWidget"
  />
</div>
`;
